@@ -4,37 +4,80 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.LinkedList;
 
 public class Extract {
 
     public static File[] extractAll(Path path) throws IOException {
         FfprobeResult[] subs = getSubtitleIds(path);
-        File folder = new File(String.format("./subs/%s/", path.getFileName().toString().replace(".sup", "")));
-        folder.mkdirs();
+        String subsFolder = String.format("./tmp/%s/", path.getFileName().toString().replaceAll("\\.[^\\.]+$", ""));
+        Files.createDirectories(Paths.get(subsFolder));
         File[] result = new File[subs.length];
+        boolean back = false;
         for (int i = 0; i < subs.length; i++) {
-            Process proc = Runtime.getRuntime().exec(String.format("ffmpeg -i %s -map 0:%d -c:s copy %s%d.sup", path.toString(), subs[i].streamID, folder.toString(), subs[i].streamID));
+            String[] cmd = new String[]{
+                    "ffmpeg",
+                    "-loglevel",
+                    "8",
+                    "-progress",
+                    "pipe:1",
+                    "-y",
+                    "-i",
+                    path.toString(),
+                    "-map",
+                    "0:" + subs[i].streamID,
+                    "-c:s",
+                    "copy",
+                    subsFolder + subs[i].streamID + ".sup"
+            };
+            Process proc = new ProcessBuilder(cmd).start();
             BufferedReader stdInput = new BufferedReader(new InputStreamReader(proc.getInputStream()));
             BufferedReader stdError = new BufferedReader(new InputStreamReader(proc.getErrorStream()));
             String s = null;
+
             while ((s = stdInput.readLine()) != null) {
-                System.out.println(s);
+                if (s.equals("progress=continue")) {
+                    if (back) {
+                        System.out.print("/\r");
+                    } else {
+                        System.out.print("\\\r");
+                    }
+                    back = !back;
+                }
             }
             while ((s = stdError.readLine()) != null) {
                 System.out.println(s);
             }
-            result[i] = new File(String.format("%s%d.sup", folder.toString(), subs[i].streamID));
+            result[i] = new File(String.format("%s%d.sup", subsFolder, subs[i].streamID));
         }
         return result;
     }
 
     private static FfprobeResult[] getSubtitleIds(Path path) throws IOException {
-        Process proc = Runtime.getRuntime().exec(String.format("ffprobe -loglevel error -select_streams s -show_entries stream=index,codec_name -of csv=p=0 %s", path.toString()));
+        String[] cmd = new String[]{
+                "ffprobe",
+                "-loglevel",
+                "error",
+                "-select_streams",
+                "s",
+                "-show_entries",
+                "stream=index,codec_name",
+                "-of",
+                "csv=p=0",
+                path.toString()
+        };
+        Process proc = new ProcessBuilder(cmd).start();
         BufferedReader stdInput = new BufferedReader(new InputStreamReader(proc.getInputStream()));
+        BufferedReader stdError = new BufferedReader(new InputStreamReader(proc.getErrorStream()));
         String s = null;
         LinkedList<FfprobeResult> liste = new LinkedList<>();
+        while ((s = stdError.readLine()) != null) {
+            System.out.println(s);
+        }
+        s = null;
         while ((s = stdInput.readLine()) != null) {
             if (s.matches("[0-9]+,.*")) {
                 String[] spl = s.split(",");
